# FumeTool

./: .gitignore  README.md  bot.py  config.example.json  config.example.py  fumetool.py  launcher.py  pyproject.toml  requirements.txt
cogs/: __core__.py  __dev__.py  __error__.py  __eval__.py  __ipc__.py  __topgg__.py  development.py  fun.py  general.py  help.py  tags.py  utility.py
utils/: cd.py  conf.py  db.py  modals.py  paginators.py  selects.py  tools.py
